# beltrami_jax

./: .gitignore  .readthedocs.yaml  README.md  SPECTRE_MIGRATION_PLAN.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  conf.py  examples.md  index.md  integration.md  limitations.md  overview.md  references.md  requirements.txt  theory.md  validation.md
docs/_static/: spectre_backend_seam_runtime_summary.json  spectre_lconstraint1_transform_summary.json  spectre_lconstraint3_free_boundary_summary.json  spectre_lconstraint3_global_summary.json  spectre_linear_parity_summary.json  spectre_toml_full_solve_summary.json  spectre_vecpot_parity_summary.json
examples/: autodiff_mu.py  benchmark_fixtures.py  parameter_scan.py  solve_spec_fixture.py  spectre_backend_dropin.py  spectre_geometry_probe.py  spectre_toml_full_solve.py  validate_spectre_vector_potential.py
src/beltrami_jax/: __init__.py  benchmark.py  diagnostics.py  geometry.py  io.py  iterative.py  nonlinear.py  operators.py  reference.py  solver.py  spectre_backend.py  spectre_constraints.py  spectre_diagnostics.py  spectre_geometry.py  spectre_input.py  spectre_integrals.py  spectre_io.py  spectre_layout.py  spectre_linear.py  spectre_matrix.py  spectre_pack.py  spectre_radial.py  spectre_solve.py  spectre_validation.py  spectre_volume_matrix.py  types.py
src/beltrami_jax/data/: __init__.py  g1v03l0fi_lvol2.npz  g3v01l0fi_lvol1.npz  g3v02l1fi_lvol1.npz
src/beltrami_jax/data/spectre_compare/: README.md
src/beltrami_jax/data/spectre_compare/G2V32L1Fi/: fresh_spectre_export.npz  input.toml  reference.h5
src/beltrami_jax/data/spectre_compare/G3V3L2Fi_stability/: fresh_spectre_export.npz  input.toml  reference.h5
src/beltrami_jax/data/spectre_compare/G3V3L3Fi/: fresh_spectre_export.npz  input.toml  reference.h5
src/beltrami_jax/data/spectre_compare/G3V8L3Free/: fresh_spectre_export.npz  input.toml  reference.h5
src/beltrami_jax/data/spectre_linear/: README.md
src/beltrami_jax/data/spectre_linear/G2V32L1Fi/: G2V32L1Fi_lvol1.npz  G2V32L1Fi_lvol2.npz  G2V32L1Fi_lvol3.npz  G2V32L1Fi_lvol4.npz
src/beltrami_jax/data/spectre_linear/G3V3L2Fi_stability/: G3V3L2Fi_stability_lvol1.npz  G3V3L2Fi_stability_lvol2.npz  G3V3L2Fi_stability_lvol3.npz
src/beltrami_jax/data/spectre_linear/G3V3L3Fi/: G3V3L3Fi_lvol1.npz  G3V3L3Fi_lvol2.npz  G3V3L3Fi_lvol3.npz
src/beltrami_jax/data/spectre_linear/G3V8L3Free/: G3V8L3Free_lvol1.npz  G3V8L3Free_lvol2.npz  G3V8L3Free_lvol3.npz  G3V8L3Free_lvol4.npz  G3V8L3Free_lvol5.npz  G3V8L3Free_lvol6.npz  G3V8L3Free_lvol7.npz  G3V8L3Free_lvol8.npz  G3V8L3Free_lvol9.npz
tests/: test_examples.py  test_reference.py  test_solver.py  test_spectre_backend.py  test_spectre_constraints.py  test_spectre_geometry.py  test_spectre_input.py  test_spectre_io.py  test_spectre_layout.py  test_spectre_linear.py  test_spectre_matrix.py  test_spectre_pack.py  test_spectre_validation.py  test_spectre_volume_matrix.py  test_workflow.py
tools/: build_spec_fixture.py  export_spectre_linear_system_npz.py  export_spectre_vecpot_npz.py  generate_spectre_backend_seam_validation_assets.py  generate_spectre_free_boundary_lconstraint3_validation_assets.py  generate_spectre_lconstraint1_validation_assets.py  generate_spectre_lconstraint3_validation_assets.py  generate_spectre_linear_validation_assets.py  generate_spectre_validation_assets.py  generate_validation_assets.py
