[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beltrami_jax"
version = "0.1.0"
description = "Differentiable JAX Beltrami linear solver port aligned with SPEC/SPECTRE-style workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Rogerio Jorge" }
]
keywords = ["jax", "plasma", "mhd", "stellarator", "tokamak", "beltrami", "spec"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "jax>=0.10.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.4",
  "furo>=2025.12.19",
  "matplotlib>=3.10",
  "myst-parser>=5",
  "numpy>=2.4",
  "pytest>=9",
  "pytest-cov>=7",
  "sphinx>=9",
]

[project.urls]
Homepage = "https://github.com/rogeriojorge/beltrami_jax"
Documentation = "https://beltrami-jax.readthedocs.io/"
Repository = "https://github.com/rogeriojorge/beltrami_jax"
Issues = "https://github.com/rogeriojorge/beltrami_jax/issues"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
beltrami_jax = ["data/*.npz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=beltrami_jax --cov-report=term-missing --cov-report=xml --cov-fail-under=90"

[tool.coverage.run]
source = ["beltrami_jax"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90
