[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beltrami_jax"
version = "0.1.0"
description = "Differentiable JAX Beltrami linear solver port aligned with SPEC/SPECTRE-style workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Rogerio Jorge" }
]
keywords = ["jax", "plasma", "mhd", "stellarator", "tokamak", "beltrami", "spec"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "jax",
]

[project.optional-dependencies]
docs = [
  "furo",
  "myst-parser",
  "sphinx",
]
validation = [
  "h5py",
  "matplotlib",
  "numpy",
  "tomli",
]
dev = [
  "build",
  "h5py",
  "matplotlib",
  "numpy",
  "pytest",
  "pytest-cov",
  "tomli",
  "furo",
  "myst-parser",
  "sphinx",
]

[project.urls]
Homepage = "https://github.com/rogeriojorge/beltrami_jax"
Documentation = "https://github.com/rogeriojorge/beltrami_jax/tree/main/docs"
Repository = "https://github.com/rogeriojorge/beltrami_jax"
Issues = "https://github.com/rogeriojorge/beltrami_jax/issues"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
beltrami_jax = [
  "data/*.npz",
  "data/spectre_compare/*/*.h5",
  "data/spectre_compare/*/*.npz",
  "data/spectre_compare/*/*.toml",
  "data/spectre_compare/*.md",
  "data/spectre_linear/*/*.npz",
  "data/spectre_linear/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=beltrami_jax --cov-report=term-missing --cov-report=xml --cov-fail-under=90"

[tool.coverage.run]
source = ["beltrami_jax"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90
